--- a/src/views/pages/appointments/review.ejs
+++ b/src/views/pages/appointments/review.ejs
@@ -23,7 +23,7 @@
           </div>
       </div>
           
-        <table class="table table-bordered">
+        <table class="table table-bordered table-striped">
           <thead>
             <tr>
               <th>Client</th>
@@ -33,7 +33,7 @@
               <th>Notes</th>
             </tr>
           </thead>
-          <tbody>
+          <tbody class="table-info">
             <% appointments.forEach((appt, i) => { %>
               <tr>
                 <td><%= appt.first_name %> <%= appt.last_name %></td>
