--- a/src/views/pages/appointments/review.ejs
+++ b/src/views/pages/appointments/review.ejs
@@ -3,8 +3,8 @@
   
     <div class="flex-grow-1 p-4">
       <h1><%= title %></h1>
-      <p class="text-muted">Final review of the schedule before posting to the database.</p>
-
+      <p class="text-muted">View, edit, or delete appointments already saved in the
+        system.</p>
       <div class="mb-3">
         <form id="postScheduleForm" data-appointments='<%- appointmentsJson %>'
         action="/appointments/save-suggested" method="POST" >
