--- a/src/views/pages/dashboard.ejs
+++ b/src/views/pages/dashboard.ejs
@@ -20,9 +20,9 @@
             <div class="col-md-4 mb-3">
                 <div class="card border-primary">
                     <div class="card-body">
-                        <h5 class="card-title">Appointments</h5>
+                        <h5 class="card-title">View Appointments</h5>
                         <p class="card-text">View and schedule cleanings</p>
-                        <a href="/appointments"
+                        <a href="/appointments/review"
                             class="btn btn-primary">Schedule</a>
                     </div>
                 </div>
