--- a/src/views/pages/appointments/review.ejs
+++ b/src/views/pages/appointments/review.ejs
@@ -37,9 +37,9 @@
             <% appointments.forEach((appt, i) => { %>
               <tr>
                 <td><%= appt.first_name %> <%= appt.last_name %></td>
-                <td>
-                  <%= appt.appointment_date %>
-                </td>
+                <td>                  
+                    <%= new Date(appt.appointment_date).toLocaleDateString("en-US") %>
+                </td>              
 
                 <td><%= appt.duration_hours %></td>
                 <td>
@@ -48,13 +48,25 @@
                 <td>
                   <input type="text" class="form-control notes-input" data-index="<%= i %>" value="<%= appt.notes || '' %>">
                 </td>
+                <td>
+                  <form action="/appointments/<%= appt.appointment_id %>/delete" method="POST"
+                    id="deleteForm-<%= appt.appointment_id %>">
+                    <button type="button" class="btn btn-sm btn-outline-danger"
+                      onclick="showDeleteModal('deleteForm-<%= appt.appointment_id %>')">
+                      <i class="bi bi-trash3"></i> Delete
+                    </button>
+                  </form>
+                             
+                </td>
+                
               </tr>
             <% }) %>
           </tbody>
         </table>
     
-        <button type="submit" class="btn btn-success mt-3"><i class="bi bi-check-circle me-2"></i>Post Final Schedule</button>
+        <!-- <button type="submit" class="btn btn-success mt-3"><i class="bi bi-check-circle me-2"></i>Post Final Schedule</button> -->
       </form>
 
 </div>
+<%- include("../../partials/deleteModal") %>
 <script src="/js/appointments-review.js"></script>
