--- a/src/views/pages/dashboard.ejs
+++ b/src/views/pages/dashboard.ejs
@@ -32,8 +32,8 @@
                 <div class="card border-success">
                     <div class="card-body">
                         <h5 class="card-title">Payments</h5>
-                        <p class="card-text">Track and update payments</p>
-                        <a href="/clients/missing-payments" class="btn btn-success">View
+                        <p class="card-text">Track all payments</p>
+                        <a href="/clients/all-payments" class="btn btn-success">View
                             Payments</a>
                     </div>
                 </div>
@@ -59,8 +59,8 @@
                             <div class="display-6 text-success mb-2">
                                 <i class="bi bi-graph-up-arrow fs-2 mb-3 text-success"></i>
                             </div>
-                            <h2 class="card-title mb-3">56%</h2>
-                            <p class="card-text text-muted">Growth Rate</p>
+                            <h2 class="card-title mb-3"><%= totalAppointments %></h2>
+                            <p class="card-text text-muted">Appointments For This Month</p>
                         </div>
                     </div>
                 </div>
@@ -68,11 +68,11 @@
                 <div class="col">
                     <div class="card h-100 text-center shadow">
                         <div class="card- body p-3">
-                            <div class="display-6 text-warning mb-2">
-                                <i class="bi bi-star-fill fs-2 mb-3 text-warning"></i>
+                            <div class="display-6 text-dager mb-2">
+                                <i class="bi bi-exclamation-octagon text-danger fs-2 mb-3"></i>
                             </div>
-                            <h2 class="card-title mb-3">4.8</h2>
-                            <p class="card-text text-muted">Average Rating</p>
+                            <h2 class="card-title mb-3"><%= missingPayments %></h2>
+                            <p class="card-text text-muted">Missing Payments</p>
                         </div>
                     </div>
                 </div>
@@ -80,11 +80,11 @@
                 <div class="col">
                     <div class="card h-100 text-center shadow">
                         <div class="card-body p-3">
-                            <div class="display-6 text-danger mb-2">
-                                <i class="bi bi-clock-history fs-2 mb-3 text-danger"></i>
+                            <div class="display-6 text-success mb-2">
+                                <i class="bi bi-cash-coin fs-2 mb-3 text-success"></i>
                             </div>
-                            <h2 class="card-title mb-3">98.3%</h2>
-                            <p class="card-text text-muted">Uptime</p>
+                            <h2 class="card-title mb-3">$ <%= monthlyRevenue %></h2>
+                            <p class="card-text text-muted">Monthly Revenue</p>
                         </div>
                     </div>
                 </div>            
