--- a/src/views/pages/dashboard.ejs
+++ b/src/views/pages/dashboard.ejs
@@ -83,7 +83,7 @@
                             <div class="display-6 text-success mb-2">
                                 <i class="bi bi-cash-coin fs-2 mb-3 text-success"></i>
                             </div>
-                            <h2 class="card-title mb-3">$ <%= monthlyRevenue %></h2>
+                            <h2 class="card-title mb-3"><%= monthlyRevenue %></h2>
                             <p class="card-text text-muted">Monthly Revenue</p>
                         </div>
                     </div>
