--- a/src/views/partials/sidebar.ejs
+++ b/src/views/partials/sidebar.ejs
@@ -24,7 +24,7 @@
 
             <li class="nav-item">
                 <a href="/appointments/monthly-preview" class="nav-link text-white hover-underline">
-                    <i class="bi bi-calendar2 me-2"></i> Appointments
+                    <i class="bi bi-calendar2 me-2"></i> Calendar
                 </a>
             </li>
 
