--- a/src/views/pages/appointments/review.ejs
+++ b/src/views/pages/appointments/review.ejs
@@ -42,7 +42,7 @@
         <div class="modal-dialog modal-lg modal-dialog-centered">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="whatsappModalLabel">WhatsApp Message Preview
+              <h5 class="modal-title" id="whatsappModalLabel"><i class="bi bi-whatsapp me-2"> </i>WhatsApp Message Preview
               </h5>
               <button type="button" class="btn-close" data-bs-dismiss="modal"
                 aria-label="Close"></button>
@@ -53,8 +53,9 @@
               </textarea>
             </div>
             <div class="modal-footer">
+              
               <button class="btn btn-outline-primary"
-                onclick="copyWhatsappText()">Copy to Clipboard</button>
+                onclick="copyWhatsappText()">Copy <i class="bi bi-clipboard"></i></button>
               <button type="button" class="btn btn-secondary"
                 data-bs-dismiss="modal">Close</button>
             </div>
