--- a/src/views/pages/dashboard.ejs
+++ b/src/views/pages/dashboard.ejs
@@ -57,7 +57,7 @@
                     <div class="card h-100 text-center shadow">
                         <div class="card- body p-3">
                             <div class="display-6 text-success mb-2">
-                                <i class="bi bi-graph-up-arrow fs-2 mb-3 text-success"></i>
+                                <i class="bi bi-book fs-2 mb-3 text-success"></i>
                             </div>
                             <h2 class="card-title mb-3"><%= totalAppointments %></h2>
                             <p class="card-text text-muted">Appointments For This Month</p>
