--- a/src/views/partials/sidebar.ejs
+++ b/src/views/partials/sidebar.ejs
@@ -41,7 +41,7 @@
             <li class="nav-item">
                 <a class="nav-link text-white hover-underline" data-bs-toggle="collapse"
                     href="#paymentsMenu" role="button">
-                    <i class="bi bi-calendar2 me-2"></i> Payments <i
+                    <i class="bi bi-cash-stack me-2"></i> Payments <i
                         class="bi bi-chevron-down"></i>
                 </a>
                 <div class="collapse ps-3" id="paymentsMenu">
